# edge-ai-libraries

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
.github/: CODEOWNERS
libraries/dl-streamer/tests/unit_tests/check/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/components/audio/: CMakeLists.txt  audio_event_test.cpp  audio_frame_test.cpp  gva_audio_event_meta_test.cpp  main_test.cpp
libraries/dl-streamer/tests/unit_tests/check/components/classification_history/: CMakeLists.txt  gva_classify_skip_tests.cpp  main_test.cpp
libraries/dl-streamer/tests/unit_tests/check/components/feature_reader/: CMakeLists.txt  feature_env_reader_test.cpp  main_test.cpp
libraries/dl-streamer/tests/unit_tests/check/components/feature_toggler/: CMakeLists.txt  main_test.cpp  runtime_feature_toggler_test.cpp
libraries/dl-streamer/tests/unit_tests/check/components/gstallocatorwrapper/: CMakeLists.txt  gst_allocator_wrapper_test.cpp
libraries/dl-streamer/tests/unit_tests/check/components/gstvideoanalyticsmeta/: CMakeLists.txt  main_test.cpp  region_of_interest_test.cpp  tensor_test.cpp  video_frame_test.cpp
libraries/dl-streamer/tests/unit_tests/check/components/null-byte-injection/: CMakeLists.txt  null-byte-injection.cpp
libraries/dl-streamer/tests/unit_tests/check/components/oo-permissions/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/components/postprocessing/: CMakeLists.txt  heatmap_boxes_test.cpp  main_test.cpp
libraries/dl-streamer/tests/unit_tests/check/components/preprocessing/: CMakeLists.txt  main_test.cpp  pre_processor_info_parser_tests.cpp  utils.cpp  utils.hpp
libraries/dl-streamer/tests/unit_tests/check/components/regular-expression/: CMakeLists.txt  reg_expression.cpp
libraries/dl-streamer/tests/unit_tests/check/components/safe_arithmetic/: CMakeLists.txt  test_safe_arithmetic.cpp
libraries/dl-streamer/tests/unit_tests/check/components/so_loader/: CMakeLists.txt  so_loader_test.cpp
libraries/dl-streamer/tests/unit_tests/check/components/symlink/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/components/utils/: CMakeLists.txt  main_test.cpp  model_proc_size_check.cpp
libraries/dl-streamer/tests/unit_tests/check/components/va-api-pre-proc/: CMakeLists.txt  gtest_main.cpp  test_vaapi_context.cpp  test_vaapi_converter.cpp  test_vaapi_images.cpp  utils.cpp  utils.h
libraries/dl-streamer/tests/unit_tests/check/elements/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/elements/audiodetect/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/elements/bboxregression/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/elements/classification/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/elements/fpscounter/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/elements/inference/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/elements/metaconvert/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/elements/metapublish/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/elements/nms/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/elements/properties/: CMakeLists.txt  test_element_inv_properties.cpp
libraries/dl-streamer/tests/unit_tests/check/elements/test_common/: CMakeLists.txt  element_test_base.h  test_common.cpp  test_common.h  test_env.cpp  test_env.h
libraries/dl-streamer/tests/unit_tests/check/pipelines/: CMakeLists.txt
libraries/dl-streamer/tests/unit_tests/check/pipelines/corrupt-data_test/: CMakeLists.txt  corrupt-data-test.c
microservices/multimodal_embedding_serving/: .gitignore  README.md  __init__.py  pyproject.toml  setup.sh
microservices/multimodal_embedding_serving/docker/: Dockerfile  compose.yaml
microservices/multimodal_embedding_serving/docs/user-guide/: docker-deployment.md  get-started.md  how-to-build-from-source.md  quick-reference.md  sdk-usage.md  supported-models.md
microservices/multimodal_embedding_serving/examples/: README.md  sdk_examples.py  server_examples.py
microservices/multimodal_embedding_serving/src/: __init__.py  app.py  wrapper.py
microservices/multimodal_embedding_serving/src/models/: __init__.py  config.py  registry.py
microservices/multimodal_embedding_serving/src/models/handlers/: __init__.py  blip2_handler.py  blip2_transformers_handler.py  clip_handler.py  cn_clip_handler.py  mobileclip_handler.py  siglip_handler.py
microservices/multimodal_embedding_serving/src/models/utils/: __init__.py  openvino_utils.py
microservices/multimodal_embedding_serving/src/sample/: __init__.py
microservices/multimodal_embedding_serving/src/utils/: __init__.py  common.py  utils.py
sample-applications/document-summarization/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.sh
sample-applications/document-summarization/app/: config.py  server.py
sample-applications/document-summarization/chart/: document-summarization-0.1.0.tgz  values.yaml
sample-applications/document-summarization/chart/charts/: docsum-api-0.1.0.tgz  ovms-service-0.1.0.tgz
sample-applications/document-summarization/chart/templates/: docsummarization-deployment.yaml
sample-applications/document-summarization/docs/user-guide/: build-from-source.md  deploy-with-helm.md  faq.md  get-started.md  how-to-deploy-with-edge-manageability-framework.md  release-notes.md  system-requirements.md
sample-applications/document-summarization/docs/user-guide/api-docs/: document-summary.yml
sample-applications/document-summarization/tests/unit_tests/: README.md
sample-applications/document-summarization/ui/: gradio_app.py
sample-applications/video-summarization/search-ms/: pyproject.toml  server.py
sample-applications/video-summarization/search-ms/docker/: Dockerfile
sample-applications/video-summarization/search-ms/scripts/: sample_video_chunker.sh
sample-applications/video-summarization/search-ms/src/utils/: common.py  utils.py
sample-applications/video-summarization/search-ms/src/vdms_retriever/: embedding_wrapper.py  retriever.py
(+1055 files in other folders)
