# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "MultiModal Embedding serving"
version = "0.1.1"
description = "The MultiModal Embedding serving is designed to generate embeddings for text, image URLs, base64 encoded images, video URLs, and base64 encoded videos. It leverages the CLIP (Contrastive Language-Image Pretraining) model to create these embeddings."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
gunicorn = "^23.0.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
opencv-python = "^4.11.0.86"
einops = "^0.8.1"
decord = "^0.6.0"
transformers = "^4.53.0"
openvino = "^2025.2.0"
httpx = "0.27.2"
timm = "1.0.16"
numpy = { version = "1.26.3", source = "pytorch-cpu" }
torch = { version = ">=2.7.1", source = "pytorch-cpu" }
torchvision = { version = ">=0.22.1", source = "pytorch-cpu" }

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"