[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.llamahub]
contains_example = false
import_path = "app.simple_summary_pack.llama_index.packs.simple_summary"

[tool.llamahub.class_authors]
SimpleSummaryPack = "llama-index"

[tool.mypy]
disallow_untyped_defs = true
exclude = ["_static", "build", "examples", "notebooks", "venv", "ui"]
ignore_missing_imports = true
python_version = "3.11"

[tool.poetry]
name = "document-summarization"
version = "0.1.0"
authors = []
packages = [{ include = "*" }]
description = "Document Summarization using llama index"
exclude = ["app/simple_summary_pack/llama_index/packs/simple_summary/BUILD"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# Core LlamaIndex dependencies
llama-index-core = "^0.12.30"
llama-index-llms-openai-like = "^0.3.4"
# FastAPI and web server dependencies
fastapi = ">=0.115.2,<1.0"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
python-multipart = "^0.0.20"
# Configuration and settings
pydantic-settings = "^2.9.1"
# Observability and monitoring
opentelemetry-sdk = "1.27.0"
opentelemetry-instrumentation-fastapi = "0.48b0"
opentelemetry-exporter-otlp = "1.27.0"
openlit = "1.33.8"
# HTTP client for health checks and external calls
httpx = "0.27.2"
# UI dependencies - required for gradio_app.py
gradio = "^5.29.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
# Code quality and testing
pytest = "^7.2.1"
pytest-mock = "^3.11.1"
mypy = "^0.991"
black = {extras = ["jupyter"], version = "^23.7.0"}
# Linting and formatting
pylint = "^2.15.10"
pre-commit = "^3.2.0"
codespell = {extras = ["toml"], version = "^2.2.6"}
# Development tools
ipython = "^8.10.0"
