
[tool.poetry]
name = "video-search"
version = "0.1.0"
description = "Intel EGAI Video Search Microservice"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
dateparser = "1.2.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
gunicorn = "^23.0.0"
langchain-community = "^0.3.0"
vdms = "0.0.21"
watchdog = "6.0.0"
minio = "7.2.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"