# ==============================================================================
# Copyright (C) 2018 Intel Corporation
#
# SPDX-License-Identifier: MIT
# ==============================================================================

add_subdirectory(elements)
add_subdirectory(pipelines)
add_subdirectory(components)
